@@ -1,9 +1,13 @@
 package com.queatz.ailaai.ui.components
 
 import androidx.compose.foundation.background
+import androidx.compose.foundation.clickable
+import androidx.compose.foundation.layout.Arrangement
 import androidx.compose.foundation.layout.Box
+import androidx.compose.foundation.layout.Row
 import androidx.compose.foundation.layout.offset
 import androidx.compose.foundation.layout.padding
+import androidx.compose.foundation.layout.requiredSize
 import androidx.compose.foundation.layout.size
 import androidx.compose.foundation.shape.CircleShape
 import androidx.compose.material3.MaterialTheme
@@ -16,13 +20,16 @@ import androidx.compose.ui.draw.shadow
 import androidx.compose.ui.geometry.Offset
 import androidx.compose.ui.graphics.Brush
 import androidx.compose.ui.graphics.Color
+import androidx.compose.ui.layout.ContentScale
 import androidx.compose.ui.res.stringResource
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.text.style.TextOverflow
 import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
 import androidx.compose.ui.zIndex
+import coil.compose.AsyncImage
 import com.queatz.ailaai.R
+import com.queatz.ailaai.data.api
 import com.queatz.ailaai.extensions.notBlank
 import com.queatz.ailaai.extensions.px
 import com.queatz.ailaai.ui.screens.OutlinedText
@@ -34,9 +41,10 @@ import kotlin.time.Duration.Companion.minutes
 @Composable
 fun Status(
     text: String? = null,
+    photo: String? = null,
     color: Color? = null,
     seen: Instant? = null,
-    block: @Composable () -> Unit
+    block: @Composable () -> Unit,
 ) {
     Box {
         block()
@@ -44,22 +52,41 @@ fun Status(
         Box(
             modifier = Modifier.matchParentSize()
         ) {
-            text?.notBlank?.let { text ->
-                Text(
-                    text = text,
-                    style = MaterialTheme.typography.bodySmall.copy(fontSize = 10.sp),
-                    maxLines = 2,
-                    overflow = TextOverflow.Ellipsis,
-                    textAlign = TextAlign.Center,
+            if (!photo.isNullOrBlank() || !text.isNullOrBlank()) {
+                Row(
+                    verticalAlignment = Alignment.CenterVertically,
                     modifier = Modifier
                         .offset(y = -1.pad)
                         .align(Alignment.TopCenter)
-                        .shadow(3.dp, MaterialTheme.shapes.large)
+                        .shadow(3.dp, MaterialTheme.shapes.medium)
                         .clip(MaterialTheme.shapes.large)
                         .background(MaterialTheme.colorScheme.surfaceBright)
                         .padding(vertical = .25f.pad, horizontal = .5f.pad)
                         .zIndex(1f)
-                )
+                ) {
+                    photo?.notBlank?.let { photo ->
+                        AsyncImage(
+                            model = photo.let(api::url),
+                            contentDescription = null,
+                            contentScale = ContentScale.Crop,
+                            modifier = Modifier
+                                .padding(0.25f.pad)
+                                .requiredSize(16.dp)
+                                .clip(MaterialTheme.shapes.small)
+                                .background(MaterialTheme.colorScheme.secondaryContainer)
+                        )
+                    }
+                    text?.notBlank?.let { text ->
+                        Text(
+                            text = text,
+                            style = MaterialTheme.typography.bodySmall.copy(fontSize = 10.sp),
+                            maxLines = 2,
+                            overflow = TextOverflow.Ellipsis,
+                            textAlign = TextAlign.Center,
+                            modifier = Modifier.weight(1f, fill = false)
+                        )
+                    }
+                }
             }
 
             color?.let { color ->
