@@ -1,33 +1,39 @@
 package app.dialog
 
-import Styles
 import app.components.StatusName
 import application
+import baseUrl
 import com.queatz.db.Person
 import com.queatz.db.PersonStatus
 import components.ProfilePhoto
+import kotlinx.coroutines.CoroutineScope
+import kotlinx.coroutines.launch
 import lib.formatDistanceToNow
 import org.jetbrains.compose.web.css.AlignItems
-import org.jetbrains.compose.web.css.Color
 import org.jetbrains.compose.web.css.DisplayStyle
 import org.jetbrains.compose.web.css.FlexDirection
 import org.jetbrains.compose.web.css.alignItems
-import org.jetbrains.compose.web.css.backgroundColor
+import org.jetbrains.compose.web.css.backgroundImage
+import org.jetbrains.compose.web.css.backgroundPosition
+import org.jetbrains.compose.web.css.backgroundSize
+import org.jetbrains.compose.web.css.borderRadius
+import org.jetbrains.compose.web.css.cursor
 import org.jetbrains.compose.web.css.display
 import org.jetbrains.compose.web.css.flexDirection
 import org.jetbrains.compose.web.css.fontSize
-import org.jetbrains.compose.web.css.gap
+import org.jetbrains.compose.web.css.height
+import org.jetbrains.compose.web.css.marginTop
 import org.jetbrains.compose.web.css.opacity
 import org.jetbrains.compose.web.css.paddingBottom
 import org.jetbrains.compose.web.css.paddingTop
 import org.jetbrains.compose.web.css.px
+import org.jetbrains.compose.web.css.width
 import org.jetbrains.compose.web.dom.Div
-import org.jetbrains.compose.web.dom.Span
 import org.jetbrains.compose.web.dom.Text
 import r
 import kotlin.js.Date
 
-suspend fun personStatusDialog(person: Person, status: PersonStatus) = dialog(
+suspend fun personStatusDialog(person: Person, status: PersonStatus, scope: CoroutineScope) = dialog(
     title = null,
     confirmButton = application.appString { profile },
     cancelButton = application.appString { close },
@@ -50,6 +56,26 @@ suspend fun personStatusDialog(person: Person, status: PersonStatus) = dialog(
         }
         status.statusInfo?.let { status ->
             StatusName(status)
+        }
+        status.photo?.let { photo ->
+            Div({
+                style {
+                    marginTop(1.r)
+                    backgroundImage("url($baseUrl$photo)")
+                    backgroundPosition("center")
+                    backgroundSize("cover")
+                    borderRadius(1.r)
+                    height(4.r)
+                    width(4.r)
+                    cursor("pointer")
+                }
+
+                onClick {
+                    scope.launch {
+                        photoDialog("$baseUrl$photo")
+                    }
+                }
+            }) {}
         }
         status.note?.let { note ->
             Div({
