@@ -1,7 +1,8 @@
 0.9.96
 ======
 
- - 
+ - Add a photo to your status
+ -
 
 0.9.95
 ======
